<resources xmlns:tools="http://schemas.android.com/tools"
    tools:locale="pt_BR">
    <string name="app_name">PlayTime</string>
    <string name="movie_overview">Sinopse</string>
    <string name="watch_trailer">Assistir Trailer</string>
    <string name="movie_runtime_format">%1$d min</string>
    <string name="movie_backdrops">Imagens de Fundo</string>
    <string name="get_notified">Me avise</string>
    <string name="no_release_date_info">Sem data de lançamento</string>
    <string name="release_date_theater_future_format">Nos cinemas em %1$s</string>
    <string name="release_date_theater_past_format">Estreou no cinemas em %1$s</string>
    <string name="release_date_digital_future_format">Disponível em %1$s</string>
    <string name="release_date_digital_past_format">Disponível desde %1$s</string>
    <string name="mark_already_watched">Já assisti</string>
    <string name="remove_already_watched">Assistido</string>
    <string name="navigate_up">Voltar</string>
    <string name="add_to_watchlist">Adicionar à lista</string>
    <string name="movie_rating_format">%1$.1f</string>
    <string name="out_of_10">/10</string>
    <string name="logo_name_start">Play</string>
    <string name="logo_name_end">Time</string>
    <string name="nav_search">Buscar</string>
    <string name="search_app_bar">Buscar por filmes</string>
    <string name="nav_movies_popular">Populares</string>
    <string name="nav_movies_saved">Minha lista</string>
    <string name="nav_profile">Perfil</string>
    <string name="listing_my_list">Minha lista</string>
    <string name="listing_watched">Assistidos</string>
    <string name="profile">Perfil</string>
    <string name="remove_get_notified">Não me avise</string>
    <string name="remove_from_watchlist">Adicionado à lista</string>
    <string name="nav_movies_releases">Lançamentos</string>
    <string name="releases_empty">Nenhum lançamento no periodo</string>
    <string name="last_month">Mês passado</string>
    <string name="this_month">Este mês</string>
    <string name="next_month">Próximo mês</string>
    <string name="list_waiting_launch">Aguardando lançamento</string>
    <string name="list_currently_added">Minha lista</string>
    <string name="list_watched">Assistidos</string>
    <string name="list_wait_no_elements">Nenhum item nesta lista</string>
    <string name="list_released_no_elements">Nenhum item nesta lista</string>
    <string name="list_watched_no_elements">Nenhum item nesta lista</string>
    <string name="movie_release_notification_channel">Filmes lançados</string>
    <string name="movie_release_notification_channel_description">Atualização quando um filme lançar em canais digitais</string>
    <string name="movie_release_notification_title">O filme que você esperava lançou!</string>
    <string name="movie_release_notification_description_single">%1$s foi lançado!</string>
    <string name="movie_release_notification_description_multiple">%1$s e outros %2$d filmes foram lançados!</string>
    <string name="movie_watch_on">Onde assistir</string>
    <string name="nav_search_cancel">Cancelar busca</string>
    <string name="movie_recommendations">Recomendações deste filme</string>
</resources>