<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
            app:liftOnScroll="true"
            app:paddingTopSystemWindowInsets="@{true}"
            app:paddingEndSystemWindowInsets="@{true}"
            app:paddingStartSystemWindowInsets="@{true}">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_logo_name_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/logo_name_start"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="22sp"
                    android:textFontWeight="600"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_logo_name_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logo_name_end"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="22sp"
                    android:textFontWeight="600"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/label_logo_name_start"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabContentStart="16dp"
                app:tabGravity="start"
                app:tabIndicatorFullWidth="false"
                app:tabMode="scrollable"
                app:tabTextAppearance="@style/PlayTime.TextAppearance.TabLayout">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listing_my_list"/>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listing_watched"/>
            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>