<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <merge
        tools:parentTag="android.widget.FrameLayout">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_logo_name_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/logo_name_start"
                android:textColor="?attr/colorPrimary"
                android:textSize="22sp"
                android:textFontWeight="600"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/label_logo_name_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo_name_end"
                android:textColor="?android:textColorPrimary"
                android:textSize="22sp"
                android:textFontWeight="600"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_logo_name_start"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_baseline_search_24"
                android:tint="?attr/colorOnSurface"
                android:contentDescription="@string/nav_search"
                style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:visibility="visible"
            android:background="?attr/colorSurface">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_cancel_search"
                android:gravity="center"
                app:hintEnabled="false"
                app:boxBackgroundColor="@null"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_app_bar"
                    android:textCursorDrawable="@null"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@null"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_cancel_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_baseline_close_24"
                android:tint="?attr/colorOnSurface"
                android:contentDescription="@string/nav_search"
                style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </merge>
</layout>