<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isEmpty"
            type="Boolean" />

        <variable
            name="actions"
            type="dev.forcetower.playtime.view.releases.ReleasesActions" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
            app:paddingTopSystemWindowInsets="@{true}"
            app:liftOnScrollTargetViewId="@id/recycler_releases"
            app:liftOnScroll="true">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:paddingEndSystemWindowInsets="@{true}"
                app:paddingStartSystemWindowInsets="@{true}">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_logo_name_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/logo_name_start"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="22sp"
                    android:textFontWeight="600"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_logo_name_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logo_name_end"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="22sp"
                    android:textFontWeight="600"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/label_logo_name_start"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/day_indicators"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingHorizontal="16dp"
                android:orientation="horizontal"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:paddingEndSystemWindowInsets="@{true}"
                app:paddingStartSystemWindowInsets="@{true}"
                tools:itemCount="3"
                tools:listitem="@layout/item_release_date_indicator"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:onRefreshListener="@{() -> actions.onSwipeRefresh()}"
            app:refreshing="@{actions.refreshing}">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_releases"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:paddingBottom="80dp"
                    android:paddingTop="8dp"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="56dp"
                    android:layout_marginHorizontal="32dp"
                    android:text="@string/releases_empty"
                    android:textFontWeight="600"
                    app:goneUnless="@{isEmpty &amp;&amp; !actions.loading}"
                    tools:targetApi="o"
                    tools:visibility="visible" />
            </FrameLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>